# kitty-os-cpp

./: .clang-format  .gitignore  CMakeLists.txt  GNUmakefile  Makefile  README.md  all.sh  bochsrc.bxrc  build.sh  bx_enh_dbg.ini  clean.sh  compile_commands.json  copy.conf  create-test-img.sh  debug-x64.sh  debug.bat  delete_duplicates.py  find-undefined.py  format.sh  fullcomp.sh  gdb_here.bat  generate_idt_entries.py  iso.sh  limine.cfg  limine.conf  logs  logs.txt  start.bat  template.iso  todolist.txt  vmware-com-dump.txt  x86_64-linker.ld
Konfig/: kernel.json
apps/: linker_common.ld
apps/init/: build.sh
apps/init/src/: main.cpp
emulator/: CMakeLists.txt  main.cpp  test.cpp.ignore  utils.hpp
emulator/emulator/: emulator.cpp  emulator.hpp  processor.cpp  processor.hpp
emulator/emulator/debugger/: debugger.cpp  debugger.hpp
emulator/instructions/: instruction_set.cpp  instruction_set.hpp
emulator/instructions/base/branching/: branching.cpp  branching.hpp
emulator/instructions/base/misc/: misc.cpp  misc.hpp
emulator/memory/: memory.cpp  memory.hpp
emulator/utils/: cmd_line_parser.cpp  cmd_line_parser.hpp  cmd_line_parser.tpp
exe/elf/: elf.cpp  elf.hpp
files/: hello_world  image  initpg  registry  zap-light32.psf
kernel/: GNUmakefile  linker.ld  pci-e.cpp  pci.hpp
kernel/apic/: apic.cpp  apic.hpp
kernel/ccmath/: basic.hpp  ccmath.hpp  compare.hpp  exponential.hpp  fmanip.hpp  hyperbolic.hpp  nearest.hpp  power.hpp  special.hpp  trig.hpp
kernel/ccmath/extensions/: clamp.hpp  degrees.hpp  fract.hpp  lerp_smooth.hpp  normalize.hpp  ping_pong.hpp  radians.hpp  smoothstep.hpp
kernel/ccmath/internal/helpers/: exp10.hpp  exp_helpers.hpp  fpclassify_helper.hpp  internal_ldexp.hpp
kernel/ccmath/internal/predef/: likely.hpp  unlikely.hpp
kernel/ccmath/internal/support/: bits.hpp  ctz.hpp  floating_point_traits.hpp  integer_literals.hpp  is_constant_evaluated.hpp  math_support.hpp  multiply_add.hpp  poly_eval.hpp  type_traits.hpp
kernel/ccmath/internal/types/: big_int.hpp  double_double.hpp  dyadic_float.hpp  int128_types.hpp  normalized_float.hpp
kernel/ccmath/math/: lerp.hpp
kernel/irqs/: irqs.cpp  irqs.hpp
kernel/ps2/kbd/: ps2_kbd.cpp  ps2_kbd.hpp
kernel/ps2/mouse/: ps2_mouse.cpp  ps2_mouse.hpp
kernel/src/: kernel_settings.hpp  some_headers.hpp
kernel/src/control/: bochs.asm  control.hpp  unreachable.asm
kernel/src/debugging/: debug_print.cpp  uart.hpp
kernel/src/kdu/: driver_ctrl.cpp  driver_ctrl.hpp  driver_entry.hpp
kernel/src/kernel/: clock.cpp  clock.hpp  fuckme.asm  kbd.cpp  kbd.hpp  kernel_main.cpp
kernel/src/kernel_terminal/: kt_command.hpp  kt_main.cpp
kernel/src/kstd/: kbitmap.hpp  kexception.hpp  kexceptions.hpp  kmutex.cpp  kmutex.hpp  kruntime_exception.hpp  kstdint.hpp  kstdio.cpp  kstdio.hpp  kstring.cpp  kstring.hpp  kvector.hpp
kernel/src/kterm/: kt.hpp
kernel/src/libcxxabi/: cxa_guard.cpp
kernel/src/libmath/: math.cpp  math.hpp
kernel/src/mm/: free_delete.cpp  heap.cpp  heap.hpp  pmm.cpp  pmm.hpp  vmm.cpp  vmm.hpp
kernel/src/ramvfs/: ramvfs.cpp  ramvfs.hpp
kernel/src/sched/: processes.cpp  processes.hpp
kernel_modules/template/: .clang-format  Makefile  template.kmod  x86_64-linker.ld
kernel_modules/template/src/: main.cpp
libs/Kitty/: build.sh
libs/Kitty/include/: Kitty.hpp
libs/klibc++/: build.sh
libs/klibc++/include/: kcstdlib.hpp
libs/klibc++/src/: crt0.cpp
ovmf/: clear_cfg_no-la64.sh  ovmf-code-x86_64.fd  ovmf-vars-loongarch64.fd  ovmf-vars-x86_64.fd
scripts/: generate_config.py
src/: ansi.hpp  debug.cpp  debug.hpp  ep.asm  kernel.h  limine.h  local_storage.cpp  local_storage.h  main.cpp
src/acpi/: acpi.cpp  acpi.h  acpi.hpp  uacpi_glue.cpp
src/acpi/uacpi/: acpi.h  context.h  default_handlers.c  event.c  event.h  helpers.h  interpreter.c  io.c  io.h  kernel_api.h  mutex.c  namespace.c  namespace.h  notify.c  notify.h  opcodes.c  opregion.c  opregion.h  osi.c  osi.h  registers.c  resources.c  resources.h  shareable.c  sleep.c  sleep.h  status.h  stdlib.c  tables.c  tables.h  types.c  types.h  uacpi.c  uacpi.h  utilities.c  utilities.h
src/clock/: clock.cpp  clock.h  rtc.cpp  rtc.h
src/dDraw/: bmp.hpp  pixels.cpp  pixels.hpp
src/dbg/: log.cpp  log.h
src/dev/: framebuffer.cpp  framebuffer.hpp
src/exe/elf/: elf.cpp  elf.hpp
src/fb/: framebuffer.cpp  framebuffer.h  image.cpp  image.h
src/flanterm/: flanterm.c
src/flanterm/backends/: fb.c
src/fs/: filesystem.cpp  filesystem.h  gpt.cpp  gpt.h  mbr.cpp  mbr.h  utils.cpp  utils.h
src/fs/fs/ext4/: ext4.h  (+1 more)
src/hal/: hal.cpp  hal.hpp  io.hpp  msr.hpp
src/hal/apic/: apic.cpp  apic.h  apic.hpp
src/hal/cpu/: io.h  msr.h  popcount.cpp
src/hal/gdt/: gdt.cpp  gdt.h  gdt.hpp  load_gdt.asm
src/hal/idt/: flush_idt.asm  idt.cpp  idt.h  idt.hpp  idt_macros.inc  idt_table.cpp  isr.cpp  load_idt.asm
src/hal/ioapic/: ioapic.cpp  ioapic.h  ioapic.hpp
src/hal/irq/: irq.cpp  irq.h
src/hal/pcie/: pcie.cpp  pcie.h  pcie.hpp  pcie_database.cpp  pcie_database.hpp
src/lib/klibc/: cpu.cpp  cpu.h  math.cpp  math.h  runtime-blob.cpp  runtime-blob.h  spinlock.cpp  spinlock.h
src/lib/npf/: nanoprintf.cpp  nanoprintf.h
src/lib/stb/: implementation.cpp  stb_image.h
src/lib/xxHash/: xxh_x86dispatch.c  xxh_x86dispatch.h  xxhash.h
src/mem/: common_memory.cpp  common_memory.hpp  heap.cpp  heap.h  heap.hpp  malloc.c  malloc.h  physical.cpp  physical.h  physical_memory.cpp  physical_memory.hpp  virtual.cpp  virtual.h  virtual_memory.cpp  virtual_memory.hpp
src/smbios/: smbios.cpp  smbios.hpp
src/smp/: sched.cpp  sched.h  smp.cpp  smp.h
src/sys/: allocator.cpp  exceptions.cpp  modules.cpp  modules.hpp  mutex.hpp  nanoprintf.cpp  nanoprintf.hpp  runtime.cpp  runtime.hpp  string.cpp  symbols.cpp  symbols.hpp
src/sys/test/: test.cpp  test.hpp  tests.cpp  tests.hpp
src/us/: syscall_handler.asm  syscalls.cpp  syscalls.hpp  userspace.hpp
src/utilities/: utilities.hpp
src/utilities/hexdump/: hexdump.cpp
src/vfs/: disk_interface.cpp  disk_interface.h  vfs.hpp  virt_fs.cpp  virt_fs.h
src/xxHash/: xxh_x86dispatch.c
(+249 files in other folders)
